[project]
name = "mlrun-hub"
version = "0.1.0"
description = "MLRun Hub - centralized location for open source contributions of mlrun hub components"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { file = "LICENSE" }
authors = [
    { name = "MLRun Team" }
]
keywords = ["mlrun", "marketplace"]

dependencies = [
    "wheel",
    "bs4",
    "mlrun>=1.10.0",
    "jinja2~=3.1.2",
    "click>=8.0",
    "pipenv",
    "myst_nb",
    "black>=24.3.0",
    "isort~=5.7",
    "sphinx~=8.1.0",
    "sphinx-book-theme~=1.1.3",
    "sphinx-togglebutton==0.3.2",
    "sphinxcontrib-applehelp==1.0.8",
    "sphinxcontrib-devhelp==1.0.6",
    "sphinxcontrib-htmlhelp==2.0.6",
    "sphinxcontrib-serializinghtml==1.1.10",
    "sphinxcontrib-qthelp==1.0.7",
]

[project.scripts]
mlrun-functions = "cli.cli:cli"

[tool.black]
line-length = 88
target-version = ["py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
